--- a/aboutus.css
+++ b/aboutus.css
@@ -136,9 +136,7 @@ li {
   top: -999px;
   z-index: 999;
 }
-.horizontal{
-  display: none;
-}
+
 
 .sub-menu-s {
   list-style-type: none;
@@ -205,6 +203,10 @@ h5 {
   height: 600px;
   margin-top: -90px;
   margin-right: -44px;
+}
+.story img{
+  width: 160rem;
+  height: 293px;
 }
 
 /* ------stat section ---- */
@@ -491,10 +493,16 @@ img {
   .cta {
     display: none;
   }
-
-  .horizontal{
-    display: none;
+  .sub-menu{
+    margin-top: 48px;
+    margin-left: -8px;
   }
+  .horizontal{
+    margin-top: 96px;
+    margin-left: -8px;
+  }
+
+  
 
   /* hamburger-menu section  */
   .hamburger-menu {
@@ -530,8 +538,12 @@ img {
   }
   .about {
     margin: 0 24px;
+    margin-top: 16px;
     flex-direction: column;
     text-align: center;
+  }
+  #about-1{
+    display: none;
   }
   .about h1 {
     font-size: 2rem;
@@ -571,6 +583,10 @@ img {
   }
   .story .container img {
     margin-top: 0;
+  }
+  .story img{
+    width: 382px;
+    height: 279px;
   }
   .stat {
     margin: 0 24px;
