--- a/obm.css
+++ b/obm.css
@@ -137,9 +137,6 @@ li {
   top: -999px;
   z-index: 999;
 }
-.horizontal{
-  display: none;
-}
 
 .sub-menu-s {
   list-style-type: none;
@@ -400,9 +397,15 @@ img {
     display: none;
   }
 
-  .horizontal{
-    display: none;
+  .sub-menu{
+    margin-top: 48px;
+    margin-left: -8px;
   }
+  .horizontal{
+    margin-top: 96px;
+    margin-left: -8px;
+  }
+
 
   /* hamburger-menu section  */
   .hamburger-menu {
