--- a/p_inner.css
+++ b/p_inner.css
@@ -136,9 +136,6 @@ li {
   top: -999px;
   z-index: 999;
 }
-.horizontal{
-  display: none;
-}
 
 .sub-menu-s {
   list-style-type: none;
@@ -376,9 +373,15 @@ img {
     display: none;
   }
 
-  .horizontal{
-    display: none;
+  .sub-menu{
+    margin-top: 48px;
+    margin-left: -8px;
   }
+  .horizontal{
+    margin-top: 96px;
+    margin-left: -8px;
+  }
+
 
   /* hamburger-menu section  */
   .hamburger-menu {
