--- a/platform.css
+++ b/platform.css
@@ -136,9 +136,6 @@ li {
   top: -999px;
   z-index: 999;
 }
-.horizontal{
-  display: none;
-}
 
 .sub-menu-s {
   list-style-type: none;
@@ -380,8 +377,13 @@ img {
     display: none;
   }
 
+  .sub-menu{
+    margin-top: 48px;
+    margin-left: -8px;
+  }
   .horizontal{
-    display: none;
+    margin-top: 96px;
+    margin-left: -8px;
   }
 
   /* hamburger-menu section  */
