--- a/style.css
+++ b/style.css
@@ -81,7 +81,6 @@ a {
   border-radius: 10px;
 }
 
-
 /* hamburger menu  */
 .hamburger-menu {
   display: none;
@@ -92,7 +91,7 @@ a {
   color: rgba(255, 95, 0, 1);
 }
 li p {
-  font-weight: 700;
+  font-weight: 400;
 }
 li {
   margin-bottom: 1rem;
@@ -105,13 +104,12 @@ li {
   margin-bottom: 8px;
 }
 
-
 /* --------------------------------------------------------- */
 .sub-menu {
   background-color: rgba(255, 255, 255, 1);
   margin-top: 1rem;
-  margin-left: -3rem;
-  padding: 2rem;
+  margin-left: 0;
+  padding: 1.5rem 2.5rem;
   list-style-type: none;
   position: absolute;
   border: 1px solid rgba(153, 153, 153, 1);
@@ -140,16 +138,14 @@ li {
   top: -999px;
   z-index: 999;
 }
-
 .sub-menu-s {
   list-style-type: none;
 }
 .nav .services-nav:hover .horizontal {
   top: 2.5rem;
   pointer-events: auto;
-  z-index: 100;
+  z-index: 10;
 }
-
 /* ------------------------------------------------------------ */
 
 /* ----hero ---- */
@@ -254,7 +250,7 @@ iframe {
 .advert {
   text-align: center;
   color: rgba(107, 107, 107, 1);
-  margin-top: 18rem;
+  margin-top: 10rem;
   margin-bottom: 5.5rem;
   overflow: hidden;
 }
@@ -369,10 +365,14 @@ iframe {
   justify-content: space-between;
   gap: 6.5rem;
 }
+.crm .desc{
+  width: 50%;
+}
 .crm:nth-of-type(1),
 .crm:nth-of-type(2) {
   margin-bottom: 5.5rem;
 }
+
 .crm .desc h5 {
   margin-bottom: 2rem;
 }
@@ -387,10 +387,10 @@ iframe {
   padding: 1rem 2rem;
 }
 
-/* .image img{
+.image img{
   width: ;
   height: ;
-} */
+}
 
 /* ----testimonial section----  */
 
@@ -448,7 +448,7 @@ iframe {
 .line {
   display: grid;
   grid-template-columns: 1fr 1fr 1fr;
-  margin-bottom: 1rem;
+  margin-bottom: 4rem;
 }
 .head-1 {
   color: rgba(255, 95, 0, 1);
@@ -654,7 +654,7 @@ img {
   .cta {
     display: none;
   }
-  
+
   /* hamburger-menu section  */
   .hamburger-menu {
     display: flex;
@@ -686,15 +686,6 @@ img {
 
   .hamburger::after {
     bottom: -8px;
-  }
-
-  .sub-menu{
-    margin-top: 48px;
-    margin-left: -8px;
-  }
-  .horizontal{
-    margin-top: 96px;
-    margin-left: -8px;
   }
   /* hero section  */
   .hero {
@@ -764,7 +755,6 @@ img {
   }
   .advert {
     margin: 40px 0;
-    margin-top: -60px;
   }
   .advert p {
     font-size: 14px;
@@ -773,13 +763,7 @@ img {
   .hr {
     display: none;
   }
-  .ad img {
-    width: 110%;
-    height: 110%;
-  }
-  .scroll {
-    width: 100%;
-  }
+
   .feature {
     width: 100%;
     margin: 40px 24px 40px 0;
@@ -912,13 +896,9 @@ img {
     margin: 40px 0;
     overflow: hidden;
   }
-  
   .testimonial h3 {
     margin-top: 8px;
     margin-bottom: 1rem;
-  }
-  .testimonial h4{
-    padding: 0 24px;
   }
   .card .slick-slide{
     padding: 10px;
@@ -1030,8 +1010,8 @@ img {
     margin-top: 40px;
   }
 
-  .contact span, h3 {
-    font-size: 24px;
+  .contact span {
+    font-size: 2rem;
   }
 
   .contact .button {
@@ -1048,9 +1028,6 @@ img {
     padding: 1rem 4.5rem;
     background-color: rgba(255, 95, 0, 1);
     border-radius: 10px;
-  }
-  .cta-s{
-    background-color: rgba(255, 250, 236, 1);
   }
 
   /* footer section  */
