--- a/style.css
+++ b/style.css
@@ -755,6 +755,7 @@ img {
   }
   .advert {
     margin: 40px 0;
+    margin-top: -40px;
   }
   .advert p {
     font-size: 14px;
@@ -856,6 +857,7 @@ img {
 
   .crm .desc-m {
     text-align: center;
+    margin-bottom: -64px;
   }
   .image-m {
     display: grid;
@@ -872,7 +874,7 @@ img {
   .crm:nth-of-type(2) {
     margin-bottom: 24px;
   }
-  .crm .desc h5 {
+  .crm .desc-m h5 {
     margin-bottom: 16px;
   }
   .learn-more {
