--- a/services.css
+++ b/services.css
@@ -9,6 +9,11 @@ html {
   font-family: "Roboto", sans-serif;
   font-size: 16px;
 }
+.containerWrp {
+  max-width: 1200px;
+  width: 100%;
+  margin: 0 auto;
+}
 h1 {
   font-size: 4.625rem; /* 74px */
   font-weight: 700;
@@ -50,126 +55,13 @@ body {
   background-color: rgb(255, 255, 255);
   color: rgba(34, 34, 34, 1);
 }
-
-/* ---------------------navbar-------------------------------------  */
-
-.navbar {
-  background-color: rgba(255, 250, 236, 1);
-  padding: 1rem 6.25rem;
-
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-}
-.nav {
-  display: flex;
-  padding: 4px;
-  gap: 3rem;
-}
-a {
-  text-decoration: none;
-  font-size: 1.25rem;
-  font-weight: 400;
-  color: rgba(34, 34, 34, 1);
-}
-.cta {
-  font-size: 1rem;
-  font-weight: 500;
-  color: rgba(255, 95, 0, 1);
-  padding: 1rem 2rem;
-  border: 1px solid rgba(255, 95, 0, 1);
-  border-radius: 10px;
-}
-
-.contact {
-    position: relative;
-  }
-  
-  .bg {
-    position: absolute;
-  }
-  .contact > .bg {
-    margin-top: 80px;
-    position: absolute;
-    /* z-index: 1; */
-    bottom: 0;
-    left: 0;
-    width: 100%;
-  }
-  .contact > .bg img {
-    max-height: 200px;
-    width: 100%;
-  }
-/* --------nav bar sub-menu section -------- */
-.nav a:hover {
-  color: rgba(255, 95, 0, 1);
-}
-li p {
-  font-weight: 700;
-}
-li {
-  margin-bottom: 1rem;
-}
-.small-p {
-  font-size: 14px;
-  font-weight: 400;
-  color: rgba(107, 107, 107, 1);
-  margin-top: -8px;
-  margin-bottom: 8px;
-}
-
-/* --------------------------------------------------------- */
-.sub-menu {
-  background-color: rgba(255, 255, 255, 1);
-  margin-top: 1rem;
-  margin-left: -3rem;
-  padding: 2rem;
-  list-style-type: none;
-  position: absolute;
-  border: 1px solid rgba(153, 153, 153, 1);
-  border-radius: 8px;
-  top: -9999px;
-  z-index: 999;
-}
-.nav .about-nav:hover .sub-menu {
-  top: 2.5rem;
-  pointer-events: auto;
-  z-index: 1;
-}
-
-/* --------------------------------------------------------- */
-.horizontal {
-  display: flex;
-  gap: 3rem;
-
-  background-color: rgba(255, 255, 255, 1);
-  margin-top: 1rem;
-  margin-left: -6rem;
-  padding: 2rem;
-  position: absolute;
-  border: 1px solid rgba(153, 153, 153, 1);
-  border-radius: 8px;
-  top: -999px;
-  z-index: 999;
-}
-
-.sub-menu-s {
-  list-style-type: none;
-}
-.nav .services-nav:hover .horizontal {
-  top: 2.5rem;
-  pointer-events: auto;
-  z-index: 1;
-}
-/* ------------------------------------------------------------ */
-
 /* ----hero section----  */
 
 .hero {
   background-color: rgba(255, 250, 236, 1);
   display: flex;
   gap: 7.75rem;
-  padding: 5.5rem 6.25rem;
+  padding: 5.5rem 0;
 }
 .hero h1 {
   font-size: 62px;
@@ -187,7 +79,7 @@ li {
 /* -----marketing automation-----  */
 
 .automation {
-  padding: 5.5rem 6.25rem;
+  padding: 5.5rem 0;
 }
 .automation h3 {
   text-align: center;
@@ -206,6 +98,12 @@ li {
   display: flex;
   gap: 20px;
   margin-bottom: 2rem;
+}
+.section .lft {
+  width: 200px;
+}
+.section .rght {
+  width: calc(100% - 220px);
 }
 .section h4 {
   color: rgba(34, 34, 34, 1);
@@ -281,7 +179,7 @@ li {
 
 /* ----work section---- */
 .work {
-  padding: 5.5rem 12.8rem;
+  padding: 5.5rem 0;
   text-align: center;
 }
 .work h5 {
@@ -311,7 +209,7 @@ li {
 
 .testimonial {
   text-align: center;
-  margin: 5.5rem 6.25rem;
+  margin: 5.5rem 0;
 }
 .testimonial h3 {
   margin-top: 2rem;
@@ -466,6 +364,7 @@ li {
   background-color: rgba(255, 250, 236, 1);
   padding-top: 3rem;
   padding-bottom: 7.5rem;
+  position: relative;
 }
 .contact h3,
 span {
@@ -478,6 +377,13 @@ span {
 }
 .bg {
   position: absolute;
+  left: 0;
+  bottom: 0;
+  width: 100%;
+}
+.bg img {
+  width: 100%;
+  max-height: 250px;
 }
 
 .cta {
@@ -570,74 +476,6 @@ img {
   vertical-align: middle;
 }
 @media only screen and (max-width: 576px) {
-  .navbar {
-    width: 100%;
-    padding: 12px 24px 12px 24px;
-    position: relative;
-  }
-  .nav.show {
-    display: flex;
-    flex-direction: column;
-    gap: 20px;
-    justify-content: flex-start;
-    align-items: flex-start;
-    background: rgba(255, 250, 236, 1);
-    border-bottom: 1px solid #ededed;
-    position: absolute;
-    top: 100%;
-    width: 100%;
-    left: 0;
-    padding: 30px;
-    padding-top: 15px;
-    padding-bottom: 50px;
-    z-index: 9999;
-  }
-  .nav,
-  .cta {
-    display: none;
-  }
-
-  .sub-menu{
-    margin-top: 48px;
-    margin-left: -8px;
-  }
-  .horizontal{
-    margin-top: 96px;
-    margin-left: -8px;
-  }
-
-  /* hamburger-menu section  */
-  .hamburger-menu {
-    display: flex;
-    justify-content: flex-end;
-    align-items: center;
-    cursor: pointer;
-    margin-right: -128px;
-  }
-
-  .hamburger {
-    width: 32px;
-    height: 2px;
-    background-color: rgba(34, 34, 34, 1);
-    position: relative;
-  }
-
-  .hamburger::before,
-  .hamburger::after {
-    content: "";
-    position: absolute;
-    width: 100%;
-    height: 2px;
-    background-color: rgba(34, 34, 34, 1);
-  }
-
-  .hamburger::before {
-    top: -8px;
-  }
-
-  .hamburger::after {
-    bottom: -8px;
-  }
   .about {
     margin: 0 24px;
     flex-direction: column;
@@ -795,7 +633,7 @@ img {
     padding-left: 24px;
     padding-right: 24px;
     justify-content: center;
-    /* flex-direction: column; */
+    flex-direction: column;
   }
   .hideMob {
     display: none;
@@ -854,6 +692,9 @@ img {
     width: 100%;
     text-align: center;
   }
+  .contact .button{
+    flex-direction: column;
+  }
   .hero h1 {
     font-size: 2rem;
     text-align: center;
@@ -885,7 +726,7 @@ img {
   .section div:nth-of-type(2) {
     width: 65%;
   }
-  .black{
+  .black {
     padding: 32px 0;
   }
   .black h3 {
@@ -893,16 +734,16 @@ img {
     font-size: 20px;
     line-height: 1.4;
   }
-  #ad-2{
+  #ad-2 {
     display: none;
   }
   .number {
     margin: 20px 24px;
   }
-  .number h1{
+  .number h1 {
     font-size: 24px;
   }
-  .number h5{
+  .number h5 {
     font-size: 14px;
   }
   .number h3 {
@@ -910,7 +751,6 @@ img {
     margin-bottom: 24px;
     font-size: 24px;
     line-height: 28px;
-
   }
   .box {
     flex-direction: column;
@@ -927,17 +767,17 @@ img {
     margin: 40px 0;
     overflow: hidden;
   }
-  
+
   .testimonial h3 {
     font-size: 24px;
     margin-top: 8px;
     margin-bottom: 1rem;
   }
-  .testimonial h4{
+  .testimonial h4 {
     font-size: 14px;
     padding: 0 24px;
   }
-  .card .slick-slide{
+  .card .slick-slide {
     padding: 10px;
   }
   .card {
@@ -957,7 +797,7 @@ img {
     width: 175px;
     height: 182px;
   }
-  .advert{
+  .advert {
     margin-top: 32px;
   }
   /* ----faq section----  */
@@ -976,10 +816,10 @@ img {
     margin-top: 8px;
     margin-bottom: 1rem;
   }
-  .faq h4{
+  .faq h4 {
     font-size: 16px;
   }
-  .faq p{
+  .faq p {
     font-size: 14px;
   }
   .head {
@@ -1045,5 +885,4 @@ img {
     display: none;
     transition: opacity 0.3s ease;
   }
-
 }
